--- a/SinWaiMai/SinWaiMai/Classes/Homepage/View/SINNewUserEnjorView.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Homepage/View/SINNewUserEnjorView.xib
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,6 +22,9 @@
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新人专享" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DhS-BD-b6N">
                     <rect key="frame" x="116" y="5" width="70" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="Hg5-Zb-Wsa"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -30,8 +35,7 @@
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="giftSign" translatesAutoresizingMaskIntoConstraints="NO" id="Qv5-df-uPl">
                             <rect key="frame" x="10" y="10" width="15" height="15"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="15" id="7AX-b8-1iz"/>
-                                <constraint firstAttribute="height" constant="15" id="XI8-R6-cSg"/>
+                                <constraint firstAttribute="width" constant="15" id="wYC-EZ-hbC"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新人活动" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gf-i4-z9Q">
@@ -43,17 +47,9 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7A-fa-47Y" userLabel="分割线">
                             <rect key="frame" x="146" y="51" width="1" height="70"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="1" id="4tV-sq-3Zs"/>
-                                <constraint firstAttribute="height" constant="70" id="FSF-11-r8C"/>
-                            </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NewUserLeft" translatesAutoresizingMaskIntoConstraints="NO" id="PzE-ZP-qHJ">
                             <rect key="frame" x="33" y="45" width="75" height="75"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="75" id="Ljr-5o-cbi"/>
-                                <constraint firstAttribute="height" constant="75" id="rXP-1Y-XSH"/>
-                            </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="任性立减" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JXm-SL-bZk">
                             <rect key="frame" x="44" y="130" width="54" height="16"/>
@@ -63,10 +59,6 @@
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NewUserRight" translatesAutoresizingMaskIntoConstraints="NO" id="C03-Xc-lgh">
                             <rect key="frame" x="184" y="45" width="75" height="75"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="75" id="Gv7-Ko-GF9"/>
-                                <constraint firstAttribute="height" constant="75" id="ta5-WK-J6G"/>
-                            </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全场1元起" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AD1-9w-NaH">
                             <rect key="frame" x="192" y="130" width="60" height="16"/>
@@ -78,8 +70,7 @@
                             <rect key="frame" x="40" y="151" width="62" height="19"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="62" id="4cj-s1-cJs"/>
-                                <constraint firstAttribute="height" constant="19" id="xc5-j2-kD9"/>
+                                <constraint firstAttribute="height" constant="19" id="a2z-6T-8Cf"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -96,10 +87,6 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="特价天天享" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xoz-mH-0b3">
                             <rect key="frame" x="191" y="151" width="62" height="19"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="62" id="Ioj-fy-aLJ"/>
-                                <constraint firstAttribute="height" constant="19" id="Ua7-Gf-SRr"/>
-                            </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="11"/>
                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -115,25 +102,37 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="AD1-9w-NaH" firstAttribute="top" secondItem="C03-Xc-lgh" secondAttribute="bottom" constant="10" id="0Wu-wX-aLK"/>
-                        <constraint firstItem="0Gf-i4-z9Q" firstAttribute="top" secondItem="Qv5-df-uPl" secondAttribute="top" id="3z6-Nn-LEx"/>
-                        <constraint firstItem="Qv5-df-uPl" firstAttribute="top" secondItem="Mng-cJ-Rvj" secondAttribute="top" constant="10" id="8ab-NO-Ont"/>
-                        <constraint firstItem="AD1-9w-NaH" firstAttribute="centerX" secondItem="C03-Xc-lgh" secondAttribute="centerX" id="9gM-HZ-Iqc"/>
-                        <constraint firstItem="H8k-ku-FUk" firstAttribute="top" secondItem="JXm-SL-bZk" secondAttribute="bottom" constant="5" id="BHm-wa-Nlj"/>
-                        <constraint firstItem="C03-Xc-lgh" firstAttribute="top" secondItem="PzE-ZP-qHJ" secondAttribute="top" id="I5E-du-7mN"/>
-                        <constraint firstItem="Xoz-mH-0b3" firstAttribute="top" secondItem="AD1-9w-NaH" secondAttribute="bottom" constant="5" id="KHa-WQ-WQd"/>
-                        <constraint firstItem="0Gf-i4-z9Q" firstAttribute="centerY" secondItem="Qv5-df-uPl" secondAttribute="centerY" id="SSF-WI-wNt"/>
-                        <constraint firstAttribute="trailing" secondItem="C03-Xc-lgh" secondAttribute="trailing" constant="33" id="Ufh-j5-A55"/>
-                        <constraint firstItem="X7A-fa-47Y" firstAttribute="centerY" secondItem="Mng-cJ-Rvj" secondAttribute="centerY" id="W32-X4-CR7"/>
-                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="top" secondItem="0Gf-i4-z9Q" secondAttribute="bottom" constant="20" id="agB-Zc-Yge"/>
-                        <constraint firstItem="JXm-SL-bZk" firstAttribute="top" secondItem="PzE-ZP-qHJ" secondAttribute="bottom" constant="10" id="ati-NI-8rO"/>
-                        <constraint firstItem="Qv5-df-uPl" firstAttribute="leading" secondItem="Mng-cJ-Rvj" secondAttribute="leading" constant="10" id="csm-cn-phu"/>
-                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="leading" secondItem="Mng-cJ-Rvj" secondAttribute="leading" constant="33" id="fM6-Wf-UpG"/>
-                        <constraint firstItem="0Gf-i4-z9Q" firstAttribute="leading" secondItem="Qv5-df-uPl" secondAttribute="trailing" constant="5" id="iUH-2G-z0f"/>
-                        <constraint firstItem="X7A-fa-47Y" firstAttribute="centerX" secondItem="Mng-cJ-Rvj" secondAttribute="centerX" id="k9N-Q4-ahC"/>
-                        <constraint firstItem="JXm-SL-bZk" firstAttribute="centerX" secondItem="PzE-ZP-qHJ" secondAttribute="centerX" id="lOT-Pj-4ai"/>
-                        <constraint firstItem="Xoz-mH-0b3" firstAttribute="centerX" secondItem="AD1-9w-NaH" secondAttribute="centerX" id="lw0-FI-DUh"/>
-                        <constraint firstItem="H8k-ku-FUk" firstAttribute="centerX" secondItem="JXm-SL-bZk" secondAttribute="centerX" id="qI4-BA-SE6"/>
+                        <constraint firstItem="JXm-SL-bZk" firstAttribute="top" secondItem="PzE-ZP-qHJ" secondAttribute="bottom" constant="10" id="0od-pb-wJy"/>
+                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="centerX" secondItem="JXm-SL-bZk" secondAttribute="centerX" id="3eE-Ma-Bp5"/>
+                        <constraint firstItem="H8k-ku-FUk" firstAttribute="firstBaseline" secondItem="Xoz-mH-0b3" secondAttribute="firstBaseline" id="3vP-aL-MXN"/>
+                        <constraint firstItem="JXm-SL-bZk" firstAttribute="leading" secondItem="Mng-cJ-Rvj" secondAttribute="leading" constant="44" id="7Eh-u2-TSg"/>
+                        <constraint firstItem="0Gf-i4-z9Q" firstAttribute="leading" secondItem="Qv5-df-uPl" secondAttribute="trailing" constant="5" id="86a-mo-r6R"/>
+                        <constraint firstItem="X7A-fa-47Y" firstAttribute="leading" secondItem="PzE-ZP-qHJ" secondAttribute="trailing" constant="38" id="ALD-DP-Y0X"/>
+                        <constraint firstItem="Qv5-df-uPl" firstAttribute="top" secondItem="0Gf-i4-z9Q" secondAttribute="top" id="APB-rD-eBl"/>
+                        <constraint firstItem="JXm-SL-bZk" firstAttribute="centerX" secondItem="H8k-ku-FUk" secondAttribute="centerX" id="Aez-lV-jPP"/>
+                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="bottom" secondItem="C03-Xc-lgh" secondAttribute="bottom" id="EPb-5D-Fv8"/>
+                        <constraint firstItem="C03-Xc-lgh" firstAttribute="top" secondItem="Mng-cJ-Rvj" secondAttribute="top" constant="45" id="EzA-6F-6hr"/>
+                        <constraint firstItem="Qv5-df-uPl" firstAttribute="bottom" secondItem="0Gf-i4-z9Q" secondAttribute="bottom" id="IOZ-AZ-8TJ"/>
+                        <constraint firstItem="AD1-9w-NaH" firstAttribute="leading" secondItem="JXm-SL-bZk" secondAttribute="trailing" constant="94" id="Uir-WV-ey4"/>
+                        <constraint firstAttribute="trailing" secondItem="C03-Xc-lgh" secondAttribute="trailing" constant="33" id="YjM-Jx-D7Y"/>
+                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="top" secondItem="C03-Xc-lgh" secondAttribute="top" id="Zlf-no-Rw5"/>
+                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="leading" secondItem="Mng-cJ-Rvj" secondAttribute="leading" constant="33" id="dLq-7z-Xlw"/>
+                        <constraint firstItem="AD1-9w-NaH" firstAttribute="baseline" secondItem="JXm-SL-bZk" secondAttribute="firstBaseline" id="fHc-GQ-Jke"/>
+                        <constraint firstItem="X7A-fa-47Y" firstAttribute="centerY" secondItem="Mng-cJ-Rvj" secondAttribute="centerY" id="gN8-ND-8rc"/>
+                        <constraint firstItem="C03-Xc-lgh" firstAttribute="centerX" secondItem="AD1-9w-NaH" secondAttribute="centerX" id="gke-JB-5MN"/>
+                        <constraint firstItem="X7A-fa-47Y" firstAttribute="centerX" secondItem="Mng-cJ-Rvj" secondAttribute="centerX" id="gyv-jF-sOs"/>
+                        <constraint firstItem="Xoz-mH-0b3" firstAttribute="leading" secondItem="H8k-ku-FUk" secondAttribute="trailing" constant="89" id="hKZ-Ih-ijx"/>
+                        <constraint firstItem="C03-Xc-lgh" firstAttribute="leading" secondItem="X7A-fa-47Y" secondAttribute="trailing" constant="37" id="hcL-Xi-iHg"/>
+                        <constraint firstItem="H8k-ku-FUk" firstAttribute="top" secondItem="JXm-SL-bZk" secondAttribute="bottom" constant="5" id="jZS-KW-HdN"/>
+                        <constraint firstItem="Qv5-df-uPl" firstAttribute="leading" secondItem="Mng-cJ-Rvj" secondAttribute="leading" constant="10" id="mwb-I1-tDm"/>
+                        <constraint firstAttribute="bottom" secondItem="H8k-ku-FUk" secondAttribute="bottom" constant="2" id="mzB-aL-LIr"/>
+                        <constraint firstItem="PzE-ZP-qHJ" firstAttribute="top" secondItem="0Gf-i4-z9Q" secondAttribute="bottom" constant="20" id="nCB-or-L7t"/>
+                        <constraint firstItem="Qv5-df-uPl" firstAttribute="top" secondItem="Mng-cJ-Rvj" secondAttribute="top" constant="10" id="o0Q-BG-h2g"/>
+                        <constraint firstItem="H8k-ku-FUk" firstAttribute="baseline" secondItem="Xoz-mH-0b3" secondAttribute="baseline" id="rIS-gs-l4w"/>
+                        <constraint firstItem="AD1-9w-NaH" firstAttribute="centerX" secondItem="Xoz-mH-0b3" secondAttribute="centerX" id="sqi-nC-QNK"/>
+                        <constraint firstItem="JXm-SL-bZk" firstAttribute="baseline" secondItem="AD1-9w-NaH" secondAttribute="baseline" id="vHE-Ac-Sz2"/>
+                        <constraint firstItem="X7A-fa-47Y" firstAttribute="top" secondItem="Mng-cJ-Rvj" secondAttribute="top" constant="51" id="zLc-YC-z3j"/>
+                        <constraint firstItem="H8k-ku-FUk" firstAttribute="leading" secondItem="Mng-cJ-Rvj" secondAttribute="leading" constant="40" id="zwh-TY-iI6"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
@@ -142,16 +141,16 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="mzx-3P-CEb" secondAttribute="trailing" id="0iP-cd-duw"/>
-                <constraint firstItem="Mng-cJ-Rvj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="1he-Cn-6OY"/>
-                <constraint firstAttribute="trailing" secondItem="Mng-cJ-Rvj" secondAttribute="trailing" constant="5" id="5KR-TC-TNe"/>
-                <constraint firstItem="DhS-BD-b6N" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="9v8-mM-WEf"/>
-                <constraint firstItem="mzx-3P-CEb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="KiZ-he-mtE"/>
-                <constraint firstItem="Mng-cJ-Rvj" firstAttribute="top" secondItem="DhS-BD-b6N" secondAttribute="bottom" constant="10" id="LHZ-Lx-Sbf"/>
-                <constraint firstAttribute="bottom" secondItem="Mng-cJ-Rvj" secondAttribute="bottom" constant="5" id="aU6-DK-abY"/>
-                <constraint firstAttribute="bottom" secondItem="mzx-3P-CEb" secondAttribute="bottom" id="awd-xy-k4P"/>
-                <constraint firstItem="mzx-3P-CEb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gln-h8-g67"/>
-                <constraint firstItem="DhS-BD-b6N" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rVg-vU-0Xa"/>
+                <constraint firstItem="Mng-cJ-Rvj" firstAttribute="top" secondItem="DhS-BD-b6N" secondAttribute="bottom" constant="10" id="5UG-UR-oI4"/>
+                <constraint firstItem="DhS-BD-b6N" firstAttribute="centerX" secondItem="Mng-cJ-Rvj" secondAttribute="centerX" id="D8w-Zk-Icd"/>
+                <constraint firstAttribute="trailing" secondItem="mzx-3P-CEb" secondAttribute="trailing" id="LuK-Ub-Q3y"/>
+                <constraint firstItem="Mng-cJ-Rvj" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="Ox6-Q2-N1S"/>
+                <constraint firstItem="mzx-3P-CEb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Pbm-AG-EW7"/>
+                <constraint firstAttribute="bottom" secondItem="Mng-cJ-Rvj" secondAttribute="bottom" constant="5" id="Tnj-7s-nnV"/>
+                <constraint firstItem="mzx-3P-CEb" firstAttribute="centerX" secondItem="DhS-BD-b6N" secondAttribute="centerX" id="cWb-xd-NSY"/>
+                <constraint firstAttribute="bottom" secondItem="mzx-3P-CEb" secondAttribute="bottom" id="iok-pU-riC"/>
+                <constraint firstItem="mzx-3P-CEb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="onw-IG-gwV"/>
+                <constraint firstItem="DhS-BD-b6N" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="vEA-ce-yqR"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
