--- a/SinWaiMai/SinWaiMai/Classes/Homepage/View/SINShoppeTableViewCell.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Homepage/View/SINShoppeTableViewCell.xib
@@ -33,25 +33,25 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="老广记牛杂（沙溪店）" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PLb-0T-S38">
-                        <rect key="frame" x="120" y="20" width="164" height="20"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="120" y="20" width="195" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="starsCount" translatesAutoresizingMaskIntoConstraints="NO" id="Dba-Nh-8WY">
-                        <rect key="frame" x="120" y="50" width="65" height="15"/>
+                        <rect key="frame" x="120" y="47" width="65" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="65" id="geg-T8-3lm"/>
                             <constraint firstAttribute="height" constant="15" id="jiF-jd-nh2"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="月销290份" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CQ-pY-xQU">
-                        <rect key="frame" x="195" y="49" width="64" height="16"/>
+                        <rect key="frame" x="195" y="46" width="64" height="16"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30分钟" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Egs-I7-TAo">
-                        <rect key="frame" x="322" y="49" width="43" height="16"/>
+                        <rect key="frame" x="322" y="46" width="43" height="16"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="13"/>
                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -79,7 +79,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="百度专送" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdr-SF-9M7">
-                        <rect key="frame" x="315" y="20" width="50" height="20"/>
+                        <rect key="frame" x="315" y="18.5" width="50" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="734-DN-g99"/>
                             <constraint firstAttribute="height" constant="20" id="rna-SV-urb"/>
@@ -122,6 +122,7 @@
                     <constraint firstItem="xwB-An-DCl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="lMX-w7-yVP"/>
                     <constraint firstItem="CBp-cz-X4d" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="ofJ-BT-ekQ"/>
                     <constraint firstItem="xwB-An-DCl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ugM-az-irr"/>
+                    <constraint firstItem="hdr-SF-9M7" firstAttribute="leading" secondItem="PLb-0T-S38" secondAttribute="trailing" id="xI2-Yw-88U"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -136,7 +137,7 @@
                 <outlet property="takeOutPriceLabel" destination="Sao-uG-9RE" id="Lrd-CA-nrM"/>
                 <outlet property="welfareContainer" destination="KIO-2V-t64" id="pjz-SQ-VZW"/>
             </connections>
-            <point key="canvasLocation" x="251" y="51"/>
+            <point key="canvasLocation" x="40" y="46"/>
         </tableViewCell>
     </objects>
     <resources>
