--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINHeaderView.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINHeaderView.xib
@@ -12,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="SINHeaderView">
-            <rect key="frame" x="0.0" y="0.0" width="327" height="186"/>
+            <rect key="frame" x="0.0" y="0.0" width="327" height="185"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zdJ-6C-n1G">
@@ -57,49 +57,60 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="配送服务" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XzL-zg-8Cf">
-                    <rect key="frame" x="251.5" y="69" width="50" height="15"/>
+                    <rect key="frame" x="252" y="69" width="50" height="15"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zeB-HR-TG1" customClass="SINHeaderView">
-                    <rect key="frame" x="0.0" y="115" width="327" height="51"/>
-                    <color key="backgroundColor" red="1" green="0.80309575499999997" blue="0.36318742850000002" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="0.0" y="115" width="327" height="39"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bag-ZN-51l">
-                    <rect key="frame" x="0.0" y="166" width="327" height="20"/>
+                    <rect key="frame" x="0.0" y="154" width="327" height="20"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VBe-hB-I8d">
-                            <rect key="frame" x="20" y="0.0" width="20" height="20"/>
+                            <rect key="frame" x="20" y="0.0" width="25" height="20"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="20" id="tty-XE-aiY"/>
+                                <constraint firstAttribute="width" constant="25" id="tty-XE-aiY"/>
                             </constraints>
-                            <state key="normal" title="勾">
+                            <state key="normal" title="√">
                                 <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <connections>
+                                <action selector="showConetentBtnClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="jhr-P1-eBo"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="只显示有内容的评价" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfb-sw-8Tz">
-                            <rect key="frame" x="55" y="0.0" width="129" height="20"/>
+                            <rect key="frame" x="50" y="0.0" width="129" height="20"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" red="0.35686274509999999" green="0.73333333329999995" blue="0.81176470590000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstItem="VBe-hB-I8d" firstAttribute="leading" secondItem="Bag-ZN-51l" secondAttribute="leading" constant="20" id="Akm-JQ-gnO"/>
                         <constraint firstAttribute="bottom" secondItem="kfb-sw-8Tz" secondAttribute="bottom" id="KPP-la-7Wu"/>
                         <constraint firstItem="kfb-sw-8Tz" firstAttribute="top" secondItem="Bag-ZN-51l" secondAttribute="top" id="XyN-7x-QgB"/>
                         <constraint firstAttribute="height" constant="20" id="clO-uH-aod"/>
-                        <constraint firstItem="kfb-sw-8Tz" firstAttribute="leading" secondItem="VBe-hB-I8d" secondAttribute="trailing" constant="15" id="djK-BK-UNe"/>
+                        <constraint firstItem="kfb-sw-8Tz" firstAttribute="leading" secondItem="VBe-hB-I8d" secondAttribute="trailing" constant="5" id="djK-BK-UNe"/>
                         <constraint firstAttribute="bottom" secondItem="VBe-hB-I8d" secondAttribute="bottom" id="gc2-ON-Uys"/>
                         <constraint firstItem="VBe-hB-I8d" firstAttribute="top" secondItem="Bag-ZN-51l" secondAttribute="top" id="yPD-uu-sAW"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yvN-wO-ydH" userLabel="底部分割线">
+                    <rect key="frame" x="20" y="184" width="287" height="1"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="k0n-WA-QwK"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Bag-ZN-51l" secondAttribute="bottom" id="8sK-8I-HHt"/>
+                <constraint firstAttribute="bottom" secondItem="yvN-wO-ydH" secondAttribute="bottom" id="3S1-7u-wGp"/>
+                <constraint firstAttribute="trailing" secondItem="yvN-wO-ydH" secondAttribute="trailing" constant="20" id="8Rg-UZ-gGB"/>
                 <constraint firstItem="6Fa-HD-q3F" firstAttribute="leading" secondItem="zdJ-6C-n1G" secondAttribute="trailing" constant="10" id="96s-Si-dW8"/>
                 <constraint firstItem="6Fa-HD-q3F" firstAttribute="bottom" secondItem="zdJ-6C-n1G" secondAttribute="bottom" constant="-10" id="9eY-6E-t6s"/>
                 <constraint firstItem="uFz-lI-FXq" firstAttribute="top" secondItem="zdJ-6C-n1G" secondAttribute="top" id="FC9-bL-MWu"/>
@@ -115,8 +126,10 @@
                 <constraint firstItem="zeB-HR-TG1" firstAttribute="top" secondItem="zdJ-6C-n1G" secondAttribute="bottom" constant="25" id="mRV-ve-xoI"/>
                 <constraint firstItem="XzL-zg-8Cf" firstAttribute="top" secondItem="s9n-yu-yAH" secondAttribute="bottom" id="nXe-O2-peE"/>
                 <constraint firstItem="Qya-Zd-fmr" firstAttribute="leading" secondItem="6Fa-HD-q3F" secondAttribute="leading" id="opI-Dy-1E3"/>
+                <constraint firstItem="yvN-wO-ydH" firstAttribute="top" secondItem="Bag-ZN-51l" secondAttribute="bottom" constant="10" id="sGb-cn-LKU"/>
                 <constraint firstItem="zdJ-6C-n1G" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="30" id="tUk-eX-821"/>
                 <constraint firstItem="XzL-zg-8Cf" firstAttribute="centerX" secondItem="s9n-yu-yAH" secondAttribute="centerX" id="uwg-6u-YPR"/>
+                <constraint firstItem="yvN-wO-ydH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="wG7-rN-bCb"/>
                 <constraint firstItem="Bag-ZN-51l" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xvW-h8-roZ"/>
                 <constraint firstItem="zeB-HR-TG1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="zvp-Ev-zIM"/>
             </constraints>
@@ -130,7 +143,7 @@
                 <outlet property="outScoreLabel" destination="s9n-yu-yAH" id="Kfh-pz-euK"/>
                 <outlet property="starImgView" destination="Qya-Zd-fmr" id="rWI-Kl-vha"/>
             </connections>
-            <point key="canvasLocation" x="113" y="-197"/>
+            <point key="canvasLocation" x="-97.5" y="-244.5"/>
         </view>
     </objects>
     <resources>
