--- a/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINCommentCell.xib
+++ b/SinWaiMai/SinWaiMai/Classes/Shoppe/View/SINCommentCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -61,13 +61,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uv-Dz-eSl">
-                        <rect key="frame" x="75" y="80" width="235" height="130"/>
+                        <rect key="frame" x="75" y="75" width="235" height="135"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="9z5-3V-GQv" firstAttribute="top" secondItem="bze-Jl-hWr" secondAttribute="top" id="0Rd-IK-TuR"/>
-                    <constraint firstItem="3uv-Dz-eSl" firstAttribute="top" secondItem="QnZ-Nf-QOt" secondAttribute="bottom" constant="15" id="1WQ-I3-jmr"/>
+                    <constraint firstItem="3uv-Dz-eSl" firstAttribute="top" secondItem="QnZ-Nf-QOt" secondAttribute="bottom" constant="10" id="1WQ-I3-jmr"/>
                     <constraint firstItem="hzm-qO-z3O" firstAttribute="leading" secondItem="kzT-4V-Z8L" secondAttribute="trailing" constant="5" id="3PV-OL-8xe"/>
                     <constraint firstItem="hzm-qO-z3O" firstAttribute="height" secondItem="kzT-4V-Z8L" secondAttribute="height" id="6RI-AS-qFH"/>
                     <constraint firstItem="9z5-3V-GQv" firstAttribute="leading" secondItem="bze-Jl-hWr" secondAttribute="trailing" constant="10" id="Egm-Wr-GTS"/>
